--- a/my-todo-app/src/components/Footer/footer.module.scss
+++ b/my-todo-app/src/components/Footer/footer.module.scss
@@ -1,5 +1,14 @@
 .footer {
   display: flex;
+  align-items: center;
+  justify-content: flex-start;
   padding: 10px;
   box-shadow: 0 1px 1px #0003,0 8px 0 -3px #f6f6f6,0 9px 1px -3px #0003,0 16px 0 -6px #f6f6f6,0 17px 2px -6px #0003;
+
+  &__filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
 }
