--- a/my-todo-app/src/components/TodoItem/todoItem.module.scss
+++ b/my-todo-app/src/components/TodoItem/todoItem.module.scss
@@ -16,10 +16,14 @@
     }
   }
 
+  &__item-title {
+    width: 100%;
+  }
+
   &__label {
     position: relative;
-    width: 24px;
-    height: 24px;
+    width: 32px;
+    height: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
