--- a/my-todo-app/src/components/Footer/footer.module.scss
+++ b/my-todo-app/src/components/Footer/footer.module.scss
@@ -9,7 +9,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 5px;
+  }
+
+  &__link {
+    padding: 10px;
+    border: 1px solid transparent;
+    cursor: pointer;
+
+    &.active {
+      border-color: yellow;
+    }
   }
 
   button {
@@ -18,6 +28,15 @@
     background: transparent;
     padding: 0;
     margin: 0;
+    text-transform: capitalize;
+    text-decoration: underline;
+    text-decoration-color: transparent;
+    cursor: pointer;
+    transition: .3s ease;
+
+    &:hover {
+      text-decoration-color: inherit;
+    }
 
     &:disabled {
       visibility: hidden;
